Add constant, variable and TensorFlow mappers